# kaggle-AI-agents-google-capstone

./: .env  .env.example  .env.template  .gitignore  README.md
.github/prompts/: config-neon-pg.prompt.md  create-fastapi-backend.prompt.md  create-mcp.prompt.md  missing-features.prompt.md  write-notebook.prompt.md
.github/workflows/: ci-backend.yml  deploy-backend.yml
backend/: .env.example  Dockerfile  README.md  cloudbuild.yaml  cloudrun_deploy.sh  pyproject.toml  requirements-full.txt  requirements-llm.txt  requirements.txt
backend/api/: __init__.py  routes_explain.py  routes_extra.py  routes_flow.py  routes_health.py  routes_mcp.py  routes_policy.py  routes_runbook.py  routes_simulate.py  routes_triage.py
backend/app/: __init__.py  a2a.py  config.py  explain.py  main.py  mcp_adk.py  models.py  observability.py  policy.py  rag.py  runbook.py  simulate.py  tools_adk.py
backend/app/agents/: __init__.py  explain.py  runbook.py  triage.py
backend/app/core/: __init__.py  db.py
backend/app/orchestration/: __init__.py  a2a.py  built_in_tools_demo.py  long_running_manager.py  mcp_adk.py  tools_adk.py
backend/app/services/: __init__.py  agent_evaluation.py  chains.py  context_compaction.py  memory_bank.py  rag.py
backend/scripts/: test_neon_connection.py
backend/tests/: conftest.py  test_a2a_flow.py  test_mcp_adk.py  test_runbook_stub.py  test_triage_policy.py
frontend/: .env.example
infra/: 01_create_app_schema.sql  02_create_memories_table.sql  03_sync_neon_auth_users.sql
notebooks/: .env.example  incident-triage-ai-agent.ipynb
